added new 'buttonbox' for soundboard-style consoles (of links, actually, not buttons)

--- a/posts/2017-01-01.md
+++ b/posts/2017-01-01.md
@@ -15,7 +15,11 @@ I made a mix the other week, it's chiefly a reflection of some recent event(s) i
 This evening I uploaded it as a New Years'
 let's-be-done-with-this ritual, I *should* rework the mixing both volumewise and track-transition-wise,
 but 2016 is over so this is as well.
-[Feel free to down and listen.](http://www.mediafire.com/file/yacx5a6qy1efz17/Problem_Halting.zip)
+Feel free to down and listen.
+
+<div class="buttonbox"><a href="http://163.172.215.81/ph.mp3" download="ProblemHalting.mp3"><span class="buttontitle">mp3</span><br/><small><code>-V0</code>, 148MB</small></a><a href="http://163.172.215.81/ph_q5.ogg" download="ProblemHalting.ogg"><span class="buttontitle">ogg</span><br/><small><code>-q5</code>, 85MB</small></a></div>
+
+
 
 ![](https://dl.dropboxusercontent.com/u/2280103/dteli/images/phcover.png)
 
