assorted latent changes that I never committed; more focused updates and additions are hopefully forthcoming

--- a/posts/2016-08-27.md
+++ b/posts/2016-08-27.md
@@ -10,7 +10,7 @@ After figuring out the kanji and katakana, I contracted some calligraphy. I'm ve
 result, much more so than Atsuo.
 
 
-![](https://dl.dropboxusercontent.com/u/2280103/dteli/images/posts/atsuotoguru.jpg "the finished product")
+![](../img/posts/atsuotoguru.jpg "the finished product")
 
 
 
