--- a/posts/2017-01-01.md
+++ b/posts/2017-01-01.md
@@ -21,14 +21,14 @@ Feel free to down and listen.
 
 
 
-![](https://dl.dropboxusercontent.com/u/2280103/dteli/images/phcover.png)
+![](../img/posts/phcover.png)
 
 Not sure how best to reliably stream in 2017 without running into
 problems with content flaggers (or paying for the bandwidth myself). 
-For now, or at least until Dropbox axes the public folder later this year, here's a plain ogg-in-a-box.
+For now, <!--or at least until Dropbox axes the public folder later this year, -->here's a plain ogg-in-a-box.
 
 <audio controls="controls" id="astreamer">
-  <source src="https://dl.dropboxusercontent.com/u/2280103/dteli/ph_q5.ogg" type="audio/ogg" />
+  <source src="http://163.172.215.81/ph_q5.ogg" type="audio/ogg" />
   *Your browser isn't down with the audio element..*
 </audio>
 
