update to v3.8: added 'vinyl' sector to site, new post, updates to dteli.hs

--- a/lps/00001.md
+++ b/lps/00001.md
@@ -1,5 +1,6 @@
 ---
-title: *Thoughts of a Dot as It Travels a Surface*
+id: "00001"
+title: Thoughts of Thoughts of a Dot as It Travels a Surface as I Listen to This Album
 author: Eli T. Drumm
 date: 2019-01-19
 lptitle: Thoughts of a Dot as It Travels a Surface
