updated resume; added new vinyl

--- a/lps/00002.md
+++ b/lps/00002.md
@@ -1,6 +1,6 @@
 ---
 id: "00002"
-title:
+title: Much Fun, Many Instruments
 author: Eli T. Drumm
 date: 2019-05-27
 lptitle: Kakashi
@@ -10,3 +10,22 @@ lpyear: 1982 (reissued 2017)
 lplink: http://paltoflats.com/release/yasuaki-shimizu-kakashi/
 lpdiscogs: https://www.discogs.com/Yasuaki-Shimizu-Kakashi/release/11179432
 ---
+
+For the first few seconds you think it's going to be weirder than it is. Then all of a sudden it's bouncy fun.
+Before the Japanese hits, get ready for some sax and brass.
+Also mallets and, well, a lot else.
+
+Altogether there's not a lot of singing on this album though, which is ok, it's about the instrumentation.
+I'm trying to think of exactly where I would hear this music in real life, because it sounds both
+contrived and natural somehow.
+If this is what Japan was like in the '80s I'm definitely down for it, for sure.
+
+Track 3 is abstracter, with horn-sounding somethings on loops and atmospheric effects.
+Track 4 brings back the reeds and brass in a slower, thumping jam.
+Track 8 is a long, smooth, mallety ride that leaves you feeling nice inside (results may vary).
+And with track 9, the closer, we have a delightful minor-key something that sounds like the archetype of "ethnic music".
+
+This album is categorized (by others) as fusion/jazz/ambient but I don't know if I would have pictured
+(uh, sound-pictured) this as what that would sound like.
+It's simultaneously background and foreground music, another little contradiction.
+Honestly I can't remember when I picked up this album or why but it's ok, it's charming.
