halfway through next big update

--- a/posts/2019-05-28-pandoc-I.md
+++ b/posts/2019-05-28-pandoc-I.md
@@ -109,7 +109,7 @@ writeHtml5 :: PandocMonad m => WriterOptions -> Pandoc -> m Html
 ~~~
 
 We know what `Text` is. The `Html` type is actually defined in the required [*blaze-html*](http://hackage.haskell.org/package/blaze-html) library
-(apparently also maintained by Haskell wunderkind [Jasper Van der Jeugt](https://jaspervdj.be), author of Hakyll---I
+(apparently also written by Haskell wunderkind [Jasper van der Jeugt](https://jaspervdj.be), author of Hakyll---I
 say "...kind" and not "...adult" because he's a year younger than me).
 I don't want to get into blaze now, it will come up later though.
 We can make progress without really understanding it, though.
